books/issues now centered on mobile on profile page

--- a/client/src/styles/global/_Display-Work-Grid.scss
+++ b/client/src/styles/global/_Display-Work-Grid.scss
@@ -6,7 +6,7 @@
     max-width: 90%;
     margin: 0 auto;
     grid-gap: 50px;
-    place-items: flex-start;
+    place-items: center;
 
 
     // mimics bootstrap column sizes
@@ -87,6 +87,7 @@
 @media only screen and (min-width: $medium) {
 
     .display-work-grid {
+        place-items: flex-start;
         grid-gap: 35px;
 
         &.col-2 {
